feat: enhance multilingual support and improve form components

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -2,9 +2,12 @@
   "payment": {
     "accountNumber": "رقم الحساب",
     "paymentDate": "تاريخ الدفع",
-    "invoiceAmount": "مبلغ الفاتورة",
-    "mainAmount": "المبلغ الأساسي",
-    "comment": "ملاحظات",
-    "register": "تسجيل"
+    "invoiceAmount": "قيمة الفاتورة",
+    "mainAmount": "القيمة الرئيسية",
+    "comment": "ملاحظة",
+    "register": "تسجيل",
+    "cancel": "إلغاء",
+    "currentInvoiceBalance": "الرصيد الحالي للفاتورة",
+    "note": "في معظم الحالات، لا يُسمح بتعيين تاريخ الإنشاء إلى الأمام أو إلى الخلف. يرجى مراجعة قوانين المحاسبة في بلدك لاستثناءات هذه القاعدة."
   }
 }
